# uvone_robot

./: .gitignore  README.md  uvone.rosinstall
uvone_robot_bringup/: CMakeLists.txt  custom_rosconsole.conf  package.xml
uvone_robot_bringup/include/sensor_door/: client.hpp  cluster.hpp  server.hpp
uvone_robot_bringup/launch/: all.launch  lamps.launch  minimal.launch  rtabmap.launch  sensors.launch  server_sensor_door.launch  usb_cam-test.launch
uvone_robot_bringup/launch/include/: lamps.launch.xml  lidar_sensor.launch.xml  mobile_base.launch.xml  scan_filter.launch.xml  usb_cam-test.launch.xml
uvone_robot_bringup/msg/: DoorStatus.msg  LightCmd.msg  MultipleDoorStatus.msg
uvone_robot_bringup/param/: ost.yaml  rtabmap.yaml
uvone_robot_bringup/param/cameras/: depth_Astra_Orbbec.yaml  rgb_Astra_Orbbec.yaml
uvone_robot_bringup/src/: light_battery_node.cpp  light_node.cpp
uvone_robot_bringup/src/sensor_door/: client.cpp  cluster.cpp  main.cpp  server.cpp
uvone_robot_bringup/srv/: CleanDisconnectedDevices.srv
uvone_robot_demo/: CMakeLists.txt  package.xml
uvone_robot_demo/launch/: automatic_navigation.launch  create_map.launch  manual_navigation.launch  rviz_create_map.launch  rviz_manual_navigation.launch
uvone_robot_demo/rviz/: create_map.rviz  manual_navigation.rviz
uvone_robot_description/: CMakeLists.txt  package.xml
uvone_robot_description/urdf/: model.urdf.xacro
uvone_robot_description/urdf/include/: astra.urdf.xacro  rplidar.urdf.xacro
uvone_robot_gazebo/: CMakeLists.txt  package.xml
uvone_robot_gazebo/launch/: empty_world.launch  willowgarage_world.launch
uvone_robot_msgs/: CMakeLists.txt  package.xml
uvone_robot_navigation/: CMakeLists.txt  package.xml
uvone_robot_navigation/launch/: command_sender.launch  move_base.launch  select_route.launch
uvone_robot_navigation/maps/: map.pgm  map.yaml  octomap_grid.pgm  octomap_grid.yaml
uvone_robot_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
uvone_robot_navigation/paths/: default.txt  ruta.txt
uvone_robot_navigation/scripts/: create_trace.py  demofile2.txt  mapa_test.pgm  mapa_test.yaml
uvone_robot_navigation/src/: command_sender.cpp  command_writer.cpp  test.cpp
uvone_robot_teleop/: CMakeLists.txt  package.xml
uvone_robot_teleop/launch/: keyboard_teleop.launch  ps4_teleop.launch
uvone_robot_teleop/src/: teleop_ds4.cpp  teleop_key
