<?xml version="1.0"?>
<package format="2">
  <name>uvone_robot_bringup</name>
  <version>1.0.0</version>
  <description>This package is used for startup basic services, like base controller.</description>

  <maintainer email="theverbat@gmail.com">Rafael Martín</maintainer>

  <license>GPLv2</license>

  <url type="website">automaticayrobotica.es</url>

  <author email="theverbat@gmail.com">Rafael Martín</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>kobuki_msgs</depend>
  <depend>uvone_robot_msgs</depend>
  <depend>sensor_door_msgs</depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>yocs_cmd_vel_mux</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>astra_launch</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>laser_filters</exec_depend>
</package>
