<?xml version="1.0"?>
<package format="2">
  <name>uvone_robot_demo</name>
  <version>1.0.0</version>
  <description>This package is used for show demos.</description>

  <maintainer email="theverbat@gmail.com">Rafael Martin</maintainer>

  <license>GPLv2</license>

  <url type="website">automaticayrobotica.es</url>

  <author email="theverbat@gmail.com">Rafael Martin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>uvone_robot_bringup</exec_depend>
  <exec_depend>uvone_robot_navigation</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sensor_door</exec_depend>
</package>
