<?xml version="1.0"?>
<package format="2">
  <name>uvone_robot_description</name>
  <version>1.0.0</version>
  <description>This package is used for uvone_robot description. Includes mesh files and urdf.</description>

  <maintainer email="theverbat@gmail.com">Rafael Martin</maintainer>

  <license>GPLv2</license>

  <url type="website">automaticayrobotica.es</url>

  <author email="theverbat@gmail.com">Rafael Martin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>kobuki_description</exec_depend>
</package>
