<?xml version="1.0"?>
<package format="2">
  <name>uvone_robot_gazebo</name>
  <version>1.0.0</version>
  <description>This package is used for simulate the robot in gazebo.</description>

  <maintainer email="theverbat@gmail.com">Rafael Martin</maintainer>

  <license>GPLv2</license>

  <url type="website">automaticayrobotica.es</url>

  <author email="theverbat@gmail.com">Rafael Martin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>yocs_cmd_vel_mux</exec_depend>
  <exec_depend>kobuki_gazebo</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>uvone_robot_bringup</exec_depend>
</package>
