<?xml version="1.0"?>
<package format="2">
  <name>uvone_robot_navigation</name>
  <version>1.0.0</version>
  <description>This package is used for naviation.</description>

  <maintainer email="theverbat@gmail.com">Rafael Martin</maintainer>

  <license>GPLv2</license>

  <url type="website">automaticayrobotica.es</url>

  <author email="theverbat@gmail.com">Rafael Martin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>tf</depend>
  <depend>tf2</depend>

  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>uvone_robot_msgs</depend>
  <depend>sensor_door_msgs</depend>
  <depend>move_base_msgs</depend>

  <build_depend>roslib</build_depend>
</package>
