<?xml version="1.0"?>
<package format="2">
  <name>uvone_robot_teleop</name>
  <version>1.0.0</version>
  <description>This package is used for teleop uvone robot.</description>

  <maintainer email="theverbat@gmail.com">Rafael Martin</maintainer>

  <license>GPLv2</license>

  <url type="website">automaticayrobotica.es</url>

  <author email="theverbat@gmail.com">Rafael Martin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>uvone_robot_msgs</depend>
  <depend>sensor_door_msgs</depend>
  <depend>std_srvs</depend>

  <build_depend>ds4_driver</build_depend>
  <exec_depend>ds4_driver</exec_depend>
</package>
